--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
         <main>
                 <div id ="zone"></div>
-                <img id="backgroundimage" src="./assets/desktopfridge.png"/>
         </main>
 
         <footer>
-
+          &copy; 2019 Caity Heath
         </footer>
 
-        <script src="js/app.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+        <script src="./app.js"></script>
     </body>
 </html>
