--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Fridgemag.Net</title>
         <link rel="stylesheet" href="./css/reset.css">
-        <link href="https://fonts.googleapis.com/css?family=Londrina+Outline|Londrina+Solid" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
     </head>
 
